--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,481 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+body {
+  background-color: white;
+  font-family: "Lato", sans-serif;
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
   margin: 0;
+  padding: 0;
+  z-index: -2;
+}
+.background_circle1 {
+  background-color: #f98770;
+  width: 79vw;
+  height: 79vw;
+  border-radius: 39.5vw;
+  position: absolute;
+  top: -20%;
+  left: -17%;
+  transform: translate(-50%-50%);
+  z-index: -1;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+.background_circle2 {
+  background-color: #5a6c73;
+  width: 44vw;
+  height: 44vw;
+  border-radius: 22vw;
+  position: absolute;
+  top: 45%;
+  left: 75%;
+  transform: translate(-50%-50%);
+  z-index: -1;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.background_line1 {
+  position: absolute;
+  background-color: #5a6c73;
+  width: 120%;
+  height: 2px;
+  z-index: -1;
+  top: 2%;
+  left: -5%;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.background_line2 {
+  position: absolute;
+  background-color: black;
+  width: 1px;
+  height: 120%;
+  top: 0%;
+  left: 97.5%;
+  z-index: -1;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.background_line3 {
+  position: absolute;
+  background-color: black;
+  width: 40%;
+  height: 1px;
+  z-index: -1;
+  top: 97.5%;
+  left: 82%;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.login_rectangle {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 57.5vh;
+  width: 78.5vw;
+  margin-left: 0px;
+  border-radius: 5vh;
+  background-color: rgba(255, 255, 245, 0.55);
+  z-index: 1;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+}
+
+.login_background {
+  position: relative;
+  backdrop-filter: blur(20px);
+}
+
+/* USERNAME */
+.flexbox_username {
+  flex-basis: 50%;
+  height: 100px;
+  display: flex;
+  margin-top: 0vh;
+  margin-bottom: 0vh;
+}
+.flexbox_username_rectangle {
+  color: #f98770;
+  font-size: 19px;
+  font-weight: 700;
+}
+.flexbox_username_text {
+  font-size: 35px;
+  color: #5a6c73;
+  font-weight: 700;
+}
+
+/* PASSWORD */
+.flexbox_password {
+  flex-basis: 50%;
+  height: 100px;
+  display: flex;
+  margin-top: 0vh;
+}
+
+.flexbox_password_rectangle {
+  color: #f98770;
+  font-size: 19px;
+  font-weight: 700;
+}
+.flexbox_password_text {
+  font-size: 35px;
+  color: #5a6c73;
+  font-weight: 700;
+}
+
+/* EMAIL */
+
+.flexbox_email {
+  flex-basis: 120%;
+  height: 100px;
+  display: flex;
+  margin-top: -15vh;
+}
+
+.flexbox_email_rectangle {
+  margin-left: 20.3vh;
+  color: #f98770;
+  font-size: 19px;
+  font-weight: 700;
+}
+.flexbox_email_text {
+  font-size: 35px;
+  color: #5a6c73;
+  font-weight: 700;
+}
+
+.flexbox_options {
+  flex-basis: 100%;
+  height: 20px;
+  font-size: 16px;
+  margin-top: -13vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 23.2vh;
+  font-weight: 700;
+  z-index: 1;
+  color: #f98770;
+}
+
+.flexbox_options_text2 {
+  margin-left: 3.1vh;
+}
+
+.flexbox_login_item1 {
+  flex-basis: 50%;
+  margin-left: 10.75vh;
+  align-self: center;
+}
+
+.flexbox_login_item12 {
+  flex-basis: 70%;
+  margin-left: -6.5vh;
+  margin-right: 7.75vh;
+  align-self: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  border-radius: 5vh;
+  max-height: 38%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flexbox_login_item2 {
+  flex-basis: 50%;
+  margin-left: 2.75vh;
+  align-self: center;
+}
+.flexbox_login_item22 {
+  flex-basis: 70%;
+  margin-left: -6.5vh;
+  margin-right: 16.5vh;
+  align-self: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  border-radius: 5vh;
+  max-height: 38%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flexbox_login_item4 {
+  flex-basis: 20%;
+  margin-left: 10.75vh;
+  align-self: center;
+  margin-top: -1vh;
+}
+.flexbox_login_item42 {
+  flex-basis: 24%;
+  margin-left: -10.25vh;
+  margin-right: 16.5vh;
+  margin-top: -1vh;
+  align-self: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  border-radius: 5vh;
+  max-height: 38%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flexbox_login_item5 {
+  flex-basis: 16.5%;
+  margin-left: -31vh;
+  align-self: flex-start;
+  background-color: #5a6c73;
+  color: #f98770;
+  border-radius: 5vh;
+  margin-top: -4vh;
+  max-height: 7%;
+  font-size: 20px;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.flexbox_login_item52 {
+  flex-basis: 50%;
+  height: 10px;
+}
+
+.flexbox_login_item6 {
+  background-color: #f98770;
+  flex-basis: 77.75%;
+  height: 2px;
+  margin-left: -18vh;
+  margin-top: -8vh;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+}
+.flexbox_login_item7 {
+  flex-basis: 10%;
+}
+
+.flexbox_login_item8 {
+  flex-basis: 28%;
+  height: 14vh;
+  font-size: 10px;
+  margin-bottom: 3.5vh;
+}
+
+.page_wrapper {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  z-index: 1;
+}
+
+.flexbox_end_text {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: -6.5vh;
+}
+
+.sidebar {
+  position: fixed;
+  top: 8.75vh;
+  right: 2vh;
+  width: 4.5vh;
+  height: 100vh;
+}
+
+.sidebar_img {
+  position: absolute;
+  top: 5vh;
+  right: 5vh;
+  width: 4.5vh;
+  height: 100vh;
+}
+
+.sidebar_menu {
+  margin-bottom: 5vh;
+}
+.sidebar_clothes {
+  margin-bottom: 6vh;
+}
+.sidebar_cupboard {
+  margin-bottom: 6vh;
+}
+.sidebar_account {
+  margin-bottom: 6vh;
+}
+
+.sidebar_logout {
+  position: fixed;
+  bottom: 8vh;
+  right: 3vh;
+}
+
+/*----------------------CUPBOARD---------------------*/
+.top_cupboard {
+  margin: 2vh;
+  margin-left: 1.5vw;
+  margin-top: 2.5vh;
+  display: flex;
+  width: 100vw;
+  height: 9.75vh;
+  justify-content: center;
+  align-items: center;
+}
+.filters_cupboard_top {
+  flex-basis: 4vw;
+  background-color: #b1bdb9;
+  margin-right: 1.9vw;
+  min-height: 7vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20%;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+.single_pieces_cupboard_top {
+  flex-basis: 19.75vw;
+  background-color: #f98770;
+  color: white;
+  font-size: 28px;
+  font-weight: 700;
+  max-height: 6vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2vw;
+  z-index: 1;
+  box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.2);
+}
+.outfits_cupboard_top {
+  flex-basis: 21.75vw;
+  background-color: #f2f2f2;
+  color: #b1bdb9;
+  font-size: 28px;
+  font-weight: 700;
+  max-height: 6vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -2vw;
+  border-top-right-radius: 2vw;
+  border-bottom-right-radius: 2vw;
+  box-shadow: inset -2px 10px 10px -10px rgba(0, 0, 0, 0.3);
+}
+.add_cupboard_top {
+  flex-basis: 4vw;
+  background-color: #f98770;
+  margin-left: 2vw;
+  min-height: 7vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20%;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.outfits_cupboard_top_text {
+  padding-left: 2vw;
+}
+
+.cupboard_all_flexbox_middle {
+  display: flex;
+  height: 39vh;
+  align-items: center;
+  justify-content: center;
+  margin-left: 1.2vw;
+  flex-wrap: wrap;
+  row-gap: 2.75vh;
+}
+
+.cupboard_flexbox_middle {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1.8vw;
+  background-color: #f2f2f2;
+  height: 39.5vh;
+  width: 19vw;
+  border-radius: 15%;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+.cupboard_single_flexbox_middle_first {
+  background-color: azure;
+  border-top-right-radius: 15%;
+  border-top-left-radius: 15%;
+  flex-basis: 50%;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+}
+.cupboard_single_flexbox_middle_second {
+  display: flex;
+  flex-basis: 10%;
+}
+.cupboard_flexbox_name_date {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 50%;
+  margin-left: 1.55vw;
+}
+.cupboard_single_name {
+  display: flex;
+  max-height: 3vh;
+  margin-bottom: -0.25vh;
+  margin-top: 0.1vh;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 700;
+  color: #f98770;
+}
+.cupboard_single_date {
+  font-size: 12px;
+  display: flex;
+  max-height: 1vh;
+  align-items: center;
+  color: #b1bdb9;
+}
+.cupboard_single_heart {
+  max-height: 3vh;
+  flex-basis: 60%;
+  margin-right: 1.4vw;
+  margin-top: 1vh;
+  text-align: end;
+}
+
+.cupboard_single_flexbox_middle_third {
+  display: flex;
+  margin-top: 2%;
+  flex-basis: 15%;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 2.9vh;
+  margin-right: 2vh;
+}
+
+.delete_single_flexbox {
+  background-color: #f98770;
+  color: white;
+  padding-left: 4.25vh;
+  padding-right: 4.25vh;
+  max-height: 4.15vh;
+  margin-top: -0.4vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2vh;
+  font-weight: 700;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.edit_single_flexbox {
+  background-color: #e7e3e4;
+  padding-left: 5.25vh;
+  padding-right: 5.25vh;
+  max-height: 4.15vh;
+  margin-top: -0.4vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2vh;
+  font-weight: 700;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
