--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,9 @@
 body {
   background-color: white;
   font-family: "Lato", sans-serif;
-  position: relative;
+  position: fixed;
   height: 100vh;
+  width: 100vw;
   overflow: hidden;
   margin: 0;
   padding: 0;
@@ -317,6 +318,7 @@ body {
   margin: 2vh;
   margin-left: 1.5vw;
   margin-top: 2.5vh;
+  margin-bottom: 0vh;
   display: flex;
   width: 100vw;
   height: 9.75vh;
@@ -350,7 +352,7 @@ body {
 }
 .outfits_cupboard_top {
   flex-basis: 21.75vw;
-  background-color: #f2f2f2;
+  background-color: #f7f7f7;
   color: #b1bdb9;
   font-size: 28px;
   font-weight: 700;
@@ -381,19 +383,26 @@ body {
 
 .cupboard_all_flexbox_middle {
   display: flex;
-  height: 39vh;
   align-items: center;
   justify-content: center;
-  margin-left: 1.2vw;
+  margin-left: 8.5vw;
+  padding-right: 0.5vw;
+  margin-top: 1.6vh;
   flex-wrap: wrap;
+  gap: 0vw;
   row-gap: 2.75vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 82vh;
+  width: 85vw;
+  z-index: 1;
 }
 
 .cupboard_flexbox_middle {
   display: flex;
   flex-direction: column;
   margin-left: 1.8vw;
-  background-color: #f2f2f2;
+  background-color: #f7f7f7;
   height: 39.5vh;
   width: 19vw;
   border-radius: 15%;
@@ -478,4 +487,71 @@ body {
   border-radius: 2vh;
   font-weight: 700;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+/*
+.scrollbar_flexbox {
+  position: absolute;
+  top: 14.75vh;
+  right: 6vw;
+  bottom: 5.5vh;
+  width: 0.75vw;
+  background-color: green;
+  border-radius: 1vh;
+  opacity: 0.5;
+  transition: opacity 0.2s ease-in-out;
+}
+.scrollbar_flexbox:hover {
+  opacity: 1;
+}
+.scroll_thumb {
+  position: absolute;
+
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+
+  border-radius: 1vh;
+  width: 0.75vw;
+  height: 9vh;
+  background-color: aqua;
+
+  transition: height;
+}
+*/
+/* Track */
+::-webkit-scrollbar {
+  width: 0.9vw;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #e7e3e4;
+  border-radius: 1vh;
+  box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.5);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #999;
+  border-radius: 1vh;
+}
+
+/* Track on hover */
+::-webkit-scrollbar-track:hover {
+  border-radius: 1vh;
+  background: #f7f7f7;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+/* Handle when dragged */
+::-webkit-scrollbar-thumb:active {
+  border-radius: 1vh;
+  background-color: #666;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f7f7f7;
+  border-radius: 1vh;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
 }
