Add firefox support, Started add clothes modal
Added a scrollwheel for firefox
Started making a modal for adding clothes in the cupboard

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -281,16 +281,16 @@ body {
 .sidebar {
   position: fixed;
   top: 8.75vh;
-  right: 2vh;
-  width: 4.5vh;
+  right: 1vw;
+  width: 2.25vw;
   height: 100vh;
 }
 
 .sidebar_img {
   position: absolute;
   top: 5vh;
-  right: 5vh;
-  width: 4.5vh;
+  right: 2.25vw;
+  width: 2.5vw;
   height: 100vh;
 }
 
@@ -310,7 +310,7 @@ body {
 .sidebar_logout {
   position: fixed;
   bottom: 8vh;
-  right: 3vh;
+  right: 1.5vw;
 }
 
 /*----------------------CUPBOARD---------------------*/
@@ -375,6 +375,11 @@ body {
   align-items: center;
   border-radius: 20%;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.add_cupboard_top:hover {
+  filter: brightness(90%);
+  cursor: pointer;
 }
 
 .outfits_cupboard_top_text {
@@ -454,37 +459,37 @@ body {
   display: flex;
   margin-top: 2%;
   flex-basis: 15%;
-  justify-content: space-between;
   align-items: center;
-  margin-left: 2.9vh;
-  margin-right: 2vh;
+  justify-content: space-around;
+  padding-left: 0.8vw;
+  padding-right: 0.4vw;
 }
 
 .delete_single_flexbox {
   background-color: #f98770;
   color: white;
-  padding-left: 4.25vh;
-  padding-right: 4.25vh;
+  padding-left: 2.2vw;
+  padding-right: 2.2vw;
   max-height: 4.15vh;
   margin-top: -0.4vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 2vh;
+  border-radius: 1vw;
   font-weight: 700;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 .edit_single_flexbox {
   background-color: #e7e3e4;
-  padding-left: 5.25vh;
-  padding-right: 5.25vh;
+  padding-left: 2.72vw;
+  padding-right: 2.72vw;
   max-height: 4.15vh;
   margin-top: -0.4vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 2vh;
+  border-radius: 1vw;
   font-weight: 700;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
@@ -518,40 +523,65 @@ body {
   transition: height;
 }
 */
-/* Track */
+
 ::-webkit-scrollbar {
   width: 0.9vw;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: #e7e3e4;
   border-radius: 1vh;
   box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.5);
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #999;
   border-radius: 1vh;
 }
 
-/* Track on hover */
 ::-webkit-scrollbar-track:hover {
   border-radius: 1vh;
   background: #f7f7f7;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
-/* Handle when dragged */
 ::-webkit-scrollbar-thumb:active {
   border-radius: 1vh;
   background-color: #666;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: #f7f7f7;
   border-radius: 1vh;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+/* FIREFOX */
+@-moz-document url-prefix() {
+  .cupboard_all_flexbox_middle {
+    scrollbar-width: thin;
+    scrollbar-color: #bbb #f7f7f7;
+  }
+  .scrollbar_shadow_firefox {
+    width: 8px;
+    background-color: transparent;
+    height: 82vh;
+    position: absolute;
+    z-index: 1;
+    top: 13.9vh;
+    right: 6vw;
+    box-shadow: inset -3px 0px 5px -3px rgba(0, 0, 0, 0.2),
+      inset 3px 0px 5px -3px rgba(0, 0, 0, 0.2);
+    pointer-events: none;
+  }
+}
+.add_clothes_modal {
+  position: absolute;
+  top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 57vw;
+  height: 47.5vh;
+  background-color: #f3f3f3;
+  border-radius: 5vh;
 }
