--- a/styles/globals.css
+++ b/styles/globals.css
@@ -280,33 +280,96 @@ body {
 
 .sidebar {
   position: fixed;
-  top: 8.75vh;
-  right: 1vw;
-  width: 2.25vw;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  top: 6.75vh;
+  right: 0.2vw;
+  width: 4.3vw;
+  height: 85vh;
+  padding-top: 0.5vh;
+  align-items: center;
 }
 
 .sidebar_img {
   position: absolute;
   top: 5vh;
-  right: 2.25vw;
+  right: 2.5vw;
   width: 2.5vw;
   height: 100vh;
 }
 
 .sidebar_menu {
-  margin-bottom: 5vh;
+  margin-bottom: 2.75vh;
+  padding-top: 1.25vh;
+  padding-bottom: 1.25vh;
+  display: flex;
+  align-self: stretch;
+  justify-content: center;
+}
+.sidebar_menu_on {
+  background-color: white;
+  border-top-right-radius: 2vw;
+  border-bottom-right-radius: 2vw;
+  margin-left: -1px;
+  box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
+}
+.sidebar_menu_on img {
+  filter: invert(75%);
 }
 .sidebar_clothes {
-  margin-bottom: 6vh;
+  margin-bottom: 3.75vh;
+  padding-top: 1.25vh;
+  padding-bottom: 1.25vh;
+  display: flex;
+  align-self: stretch;
+  justify-content: center;
+}
+.sidebar_clothes_on {
+  background-color: white;
+  border-top-right-radius: 2vw;
+  border-bottom-right-radius: 2vw;
+  margin-left: -1px;
+  box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
+}
+.sidebar_clothes_on img {
+  filter: invert(75%);
 }
 .sidebar_cupboard {
-  margin-bottom: 6vh;
+  margin-bottom: 4vh;
+  padding-top: 1.2vh;
+  padding-bottom: 1.2vh;
+  display: flex;
+  align-self: stretch;
+  justify-content: center;
+}
+.sidebar_cupboard_on {
+  background-color: white;
+  border-top-right-radius: 2vw;
+  border-bottom-right-radius: 2vw;
+  margin-left: -1px;
+  box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
+}
+.sidebar_cupboard_on img {
+  filter: invert(75%);
 }
 .sidebar_account {
   margin-bottom: 6vh;
+  padding-top: 1.25vh;
+  padding-bottom: 1.25vh;
+  display: flex;
+  align-self: stretch;
+  justify-content: center;
 }
-
+.sidebar_account_on {
+  background-color: white;
+  border-top-right-radius: 2vw;
+  border-bottom-right-radius: 2vw;
+  margin-left: -1px;
+  box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
+}
+.sidebar_account_on img {
+  filter: invert(75%);
+}
 .sidebar_logout {
   position: fixed;
   bottom: 8vh;
@@ -314,6 +377,26 @@ body {
 }
 
 /*----------------------CUPBOARD---------------------*/
+.pieces_cupboard_top_text {
+  position: absolute;
+  top: 7.2vh;
+  left: 41.5vw;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  font-size: 28px;
+  font-weight: 700;
+  pointer-events: none;
+}
+.outfits_cupboard_top_text {
+  position: absolute;
+  top: 7.2vh;
+  left: 61.25vw;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  font-size: 28px;
+  font-weight: 700;
+  pointer-events: none;
+}
 .top_cupboard {
   padding: 2vh;
   padding-left: 1.5vw;
@@ -325,11 +408,14 @@ body {
   justify-content: center;
   align-items: center;
 }
+.top_cupboard button {
+  border: 0;
+}
 .filters_cupboard_top {
   flex-basis: 4vw;
   background-color: #b1bdb9;
   margin-right: 1.9vw;
-  min-height: 7vh;
+  height: 7vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -338,58 +424,68 @@ body {
 }
 .single_pieces_cupboard_top {
   flex-basis: 19.75vw;
-  background-color: #f98770;
-  color: white;
-  font-size: 28px;
-  font-weight: 700;
-  max-height: 6vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 2vw;
-  z-index: 1;
-  box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  background-color: #f7f7f7;
+  color: #b1bdb9;
+  height: 6vh;
+  border-top-left-radius: 2vw;
+  border-bottom-left-radius: 2vw;
+  z-index: 0;
+  box-shadow: inset -2px 10px 10px -10px rgba(0, 0, 0, 0.3);
 }
 .outfits_cupboard_top {
   flex-basis: 21.75vw;
   background-color: #f7f7f7;
-  color: #b1bdb9;
-  font-size: 28px;
-  font-weight: 700;
-  max-height: 6vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 6vh;
   margin-left: -2vw;
   border-top-right-radius: 2vw;
   border-bottom-right-radius: 2vw;
   box-shadow: inset -2px 10px 10px -10px rgba(0, 0, 0, 0.3);
 }
+.transition_all_1s {
+  transition: all 1s ease;
+}
+.transition_all_05s {
+  transition: all 0.5s ease;
+}
+.transition_all_02s {
+  transition: all 0.2s ease;
+}
+.pieces_outfits_moving_container {
+  position: fixed;
+  width: 20vw;
+  height: 5.9vh;
+  border-radius: 20vw;
+  background-color: #f98770;
+  z-index: 1;
+  pointer-events: none;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+}
 .add_cupboard_top {
   flex-basis: 4vw;
   background-color: #f98770;
   margin-left: 2vw;
-  min-height: 7vh;
+  height: 7vh;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 20%;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
-
 .add_cupboard_top:hover {
   filter: brightness(90%);
   cursor: pointer;
 }
-
-.outfits_cupboard_top_text {
-  padding-left: 2vw;
-}
-
-.cupboard_all_flexbox_middle {
+.cupboard_flexbox_middle_all {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  margin-left: 2vw;
+  width: 200vw;
+  height: 82vh;
+  background-color: lightblue;
+  margin-top: 1.6vh;
+}
+.cupboard_flexbox_middle_1 {
+  position: absolute;
+  display: flex;
   margin-left: 8.5vw;
   padding-right: 0.5vw;
   margin-top: 1.6vh;
@@ -400,9 +496,36 @@ body {
   overflow-x: hidden;
   height: 82vh;
   width: 85vw;
-  z-index: 1;
+  z-index: 0;
 }
-
+.cupboard_outfit_images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.cupboard_outfit_images_single {
+  flex-basis: 38%;
+  height: auto;
+}
+.cupboard_outfit_images_single img {
+  width: 100%;
+  height: 95%;
+}
+.cupboard_flexbox_middle_2 {
+  position: absolute;
+  display: flex;
+  margin-left: 8.5vw;
+  padding-right: 0.5vw;
+  margin-top: 1.6vh;
+  flex-wrap: wrap;
+  gap: 0vw;
+  row-gap: 2.75vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 82vh;
+  width: 85vw;
+  z-index: 0;
+}
 .cupboard_flexbox_middle {
   display: flex;
   flex-direction: column;
@@ -461,35 +584,35 @@ body {
   flex-basis: 15%;
   align-items: center;
   justify-content: space-around;
-  padding-left: 0.8vw;
-  padding-right: 0.4vw;
+  margin-left: 1.2vw;
+  margin-right: 0.6vw;
 }
 
 .delete_single_flexbox {
   background-color: #f98770;
   color: white;
-  padding-left: 2.2vw;
-  padding-right: 2.2vw;
+  padding-left: 2.6vw;
+  padding-right: 2.6vw;
   max-height: 4.15vh;
   margin-top: -0.4vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 1vw;
+  border-radius: 1.5vw;
   font-weight: 700;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 .edit_single_flexbox {
   background-color: #e7e3e4;
-  padding-left: 2.72vw;
-  padding-right: 2.72vw;
+  padding-left: 3.1vw;
+  padding-right: 3.1vw;
   max-height: 4.15vh;
   margin-top: -0.4vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 1vw;
+  border-radius: 1.5vw;
   font-weight: 700;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
