--- a/styles/globals.css
+++ b/styles/globals.css
@@ -282,20 +282,15 @@ body {
   position: fixed;
   display: flex;
   flex-direction: column;
-  top: 6.75vh;
-  right: 0.2vw;
-  width: 4.3vw;
-  height: 85vh;
-  padding-top: 0.5vh;
+  top: 5.35vh;
+  right: 0vw;
+  width: 5vw;
+  height: 87vh;
+  padding-top: 2vh;
   align-items: center;
-}
-
-.sidebar_img {
-  position: absolute;
-  top: 5vh;
-  right: 2.5vw;
-  width: 2.5vw;
-  height: 100vh;
+  background-color: #f98770;
+  border-top-left-radius: 2vh;
+  border-bottom-left-radius: 2vh;
 }
 
 .sidebar_menu {
@@ -310,7 +305,6 @@ body {
   background-color: white;
   border-top-right-radius: 2vw;
   border-bottom-right-radius: 2vw;
-  margin-left: -1px;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
 }
 .sidebar_menu_on img {
@@ -328,7 +322,6 @@ body {
   background-color: white;
   border-top-right-radius: 2vw;
   border-bottom-right-radius: 2vw;
-  margin-left: -1px;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
 }
 .sidebar_clothes_on img {
@@ -346,7 +339,6 @@ body {
   background-color: white;
   border-top-right-radius: 2vw;
   border-bottom-right-radius: 2vw;
-  margin-left: -1px;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
 }
 .sidebar_cupboard_on img {
@@ -364,7 +356,6 @@ body {
   background-color: white;
   border-top-right-radius: 2vw;
   border-bottom-right-radius: 2vw;
-  margin-left: -1px;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
 }
 .sidebar_account_on img {
@@ -442,6 +433,9 @@ body {
   box-shadow: inset -2px 10px 10px -10px rgba(0, 0, 0, 0.3);
 }
 .transition_all_1s {
+  transition: all 1s ease;
+}
+.transition_all_1s_2 {
   transition: all 1s ease;
 }
 .transition_all_05s {
@@ -834,13 +828,11 @@ body {
 .flexbox_add_beige {
   background-color: bisque;
 }
-.flexbox_add_clothes_modal_3 {
-  display: flex;
-}
 .add_clothes_modal p {
   margin: 0;
 }
 .flexbox_add_clothes_modal_3 {
+  display: flex;
   flex-basis: 12.25%;
   justify-content: space-between;
 }
@@ -883,4 +875,86 @@ body {
 .blurred {
   filter: blur(25px);
   transition: filter 0.05s ease-in-out;
+}
+
+.flexbox_add_outfit_images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-basis: 42.25%;
+  row-gap: 1.5vh;
+}
+.flexbox_add_outfit_images_single {
+  flex-basis: 48%;
+  height: auto;
+  background-color: #b1bdb9;
+  border-radius: 15%;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  padding: 7.1vh 0;
+}
+.flexbox_add_outfit_images_single img {
+  width: 25%;
+  height: auto;
+}
+.flexbox_add_outfit_modal_2 {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 56.5%;
+  justify-content: space-between;
+  margin-top: 9vh;
+  margin-bottom: 12.25vh;
+}
+.flexbox_add_outfit_text {
+  display: flex;
+  flex-basis: 20%;
+  margin-bottom: 2.3vh;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  color: #f98770;
+  font-size: 34px;
+  font-weight: 700;
+}
+.flexbox_add_outfit_title {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 15%;
+  text-align: center;
+  font-size: 20px;
+}
+.flexbox_add_outfit_title_line {
+  background-color: black;
+  flex-basis: 1%;
+  margin: 0 4vw;
+  margin-top: auto;
+}
+.flexbox_add_outfit_modal_3 {
+  display: flex;
+  flex-basis: 25%;
+  justify-content: space-between;
+  margin: 0vh 3.65vw;
+}
+.flexbox_add_outfit_discard {
+  background-color: #596c73;
+  flex-basis: 44%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: white;
+  border-radius: 2.5vh;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+.flexbox_add_outfit_save {
+  background-color: #f98770;
+  flex-basis: 44%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: white;
+  border-radius: 2.5vh;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
