--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -104,3 +104,100 @@
   color: #5a6c73;
   flex-basis: 15%;
 }
+.background_left {
+  display: flex;
+  position: absolute;
+  width: 84.5vh;
+  height: 2vw;
+  top: 54.75%;
+  left: 3.7%;
+  transform: translate(-50%, -50%) rotate(-90deg);
+}
+.background_left_item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
+.background_left_text1 {
+  box-sizing: border-box;
+  flex-basis: 10%;
+  color: #f98770;
+}
+.background_left_text2 {
+  box-sizing: border-box;
+  flex-basis: 10%;
+  color: #f98770;
+}
+.background_left_text3 {
+  box-sizing: border-box;
+  flex-basis: 15%;
+  color: #f98770;
+}
+.background_left_line {
+  box-sizing: border-box;
+  flex-basis: 65%;
+  background-color: rgba(0, 0, 0, 0.75);
+  margin: 0.99vw 0vh;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+.background_down_line {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 93.5%;
+  left: 16.75%;
+  transform: translate(-50%, -50%);
+  width: 22vw;
+  height: 2px;
+}
+.background_right_line {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 35%;
+  left: 96.5%;
+  transform: translate(-50%, -50%);
+  width: 2px;
+  height: 70vh;
+}
+.background_up {
+  display: flex;
+  position: absolute;
+  width: 49vw;
+  height: 10vh;
+  top: 6%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+}
+.background_up_item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.background_up_img {
+  flex-basis: 13%;
+  padding-right: 2%;
+}
+.background_up_line1 {
+  background-color: rgba(0, 0, 0, 0.5);
+  flex-basis: 43%;
+  margin: 4.9vh 0vw;
+}
+.background_up_text {
+  flex-basis: 33%;
+  font-size: 17px;
+  color: #f98770;
+}
+.background_up_line2 {
+  flex-basis: 9%;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 4.9vh 0vw;
+}
+.background_up_line3 {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 6%;
+  left: 89%;
+  transform: translate(-50%, -50%);
+  width: 23vw;
+  height: 2px;
+}
