--- a/styles/clothes.module.css
+++ b/styles/clothes.module.css
@@ -1,3 +1,22 @@
+.clothes_menu_list_images_container::-webkit-scrollbar-thumb {
+  background: #b1bdb9;
+}
+
+.clothes_menu_list_images_container::-webkit-scrollbar-thumb:hover {
+  background: #999;
+}
+
+.clothes_menu_list_images_container::-webkit-scrollbar-track:hover {
+  background: #f7f7f7;
+}
+
+.clothes_menu_list_images_container::-webkit-scrollbar-thumb:active {
+  background-color: #666;
+}
+
+.clothes_menu_list_images_container::-webkit-scrollbar-track {
+  background: #f7f7f7;
+}
 .background_circle1 {
   background-color: #f98770;
   width: 79vw;
@@ -53,10 +72,20 @@
   row-gap: 2.5vh;
   margin-bottom: 1vh;
 }
-.outfit_creator_images img {
+
+.outfit_creator_images_container {
+  position: relative;
   height: 35.5vh;
   width: 35.5vh;
   border-radius: 5%;
+  overflow: hidden;
+}
+
+.outfit_creator_images_container img {
+  object-fit: cover;
+  object-position: top center;
+  height: 100%;
+  width: 100%;
 }
 .outfit_creator_bottom {
   flex-basis: 4%;
@@ -106,7 +135,7 @@
   transform: scale(1, 0.6) translate(0vw, 0vh);
 }
 .clothes_menu {
-  background-color: aquamarine;
+  background-color: black;
   display: flex;
   position: absolute;
   top: 6.25%;
@@ -116,10 +145,154 @@
   width: 34.5vw;
 }
 .clothes_menu_list {
-  background-color: lightcoral;
   flex-basis: 80.25%;
+  display: flex;
+  flex-direction: column;
 }
 .clothes_menu_type {
   background-color: red;
   flex-basis: 19.75%;
+}
+.clothes_menu_list_filters {
+  flex-basis: 4.25%;
+  background-color: #b1bdb9;
+  display: flex;
+  border-top-left-radius: 1vw;
+  border-top-right-radius: 1vw;
+  box-sizing: border-box;
+  padding: 1.25% 0;
+  box-shadow: inset 0px 10px 10px -10px rgba(0, 0, 0, 0.25);
+}
+.clothes_menu_list_filters > div {
+  background-color: #5a6c73;
+  margin-right: 1.5%;
+  display: flex;
+  justify-content: center;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.4);
+}
+.clothes_menu_list_filters > div > img {
+  padding-top: 12.5%;
+  height: 75%;
+  width: auto;
+}
+.clothes_menu_list_filters_filter {
+  display: flex;
+  flex-basis: 36%;
+  box-sizing: border-box;
+  margin-left: 1%;
+  border-radius: 1vw;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 16px;
+  color: white;
+}
+
+.clothes_menu_list_filters_filter > span {
+  font-size: 20px;
+  display: inline-block;
+  transform: scale(1, 0.5);
+  margin-left: 0.2vw;
+  font-weight: 700;
+}
+
+.clothes_menu_list_filters_color {
+  flex-basis: 5.54%;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.clothes_menu_list_filters_color_colors {
+  background-color: blue;
+  margin: 17%;
+  flex-basis: 66%;
+  border-radius: 50%;
+}
+.clothes_menu_list_filters_cold {
+  flex-basis: 5.54%;
+  border-radius: 50%;
+}
+.clothes_menu_list_filters_rainy {
+  flex-basis: 5.54%;
+  border-radius: 50%;
+}
+.clothes_menu_list_filters_sad {
+  flex-basis: 5.54%;
+  border-radius: 50%;
+}
+.clothes_menu_list_filters_happy {
+  flex-basis: 5.54%;
+  border-radius: 50%;
+}
+.clothes_menu_list_images {
+  background-color: #e7e3e4;
+  overflow-y: hidden;
+  display: flex;
+  padding: 5% 1.25%;
+  padding-bottom: 10%;
+  flex-basis: 79vh;
+  box-shadow: inset 5px 0px 5px -5px rgba(0, 0, 0, 0.2),
+    inset -5px 0px 5px -5px rgba(0, 0, 0, 0.2),
+    inset 0px -5px 5px -5px rgba(0, 0, 0, 0.2);
+  border-bottom-left-radius: 1vw;
+  border-bottom-right-radius: 1vw;
+}
+.clothes_menu_list_images_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-content: flex-start;
+  flex-basis: 100%;
+  gap: 0vw;
+  row-gap: 0.25vh;
+  overflow-y: scroll;
+}
+
+.clothes_menu_list_img_container {
+  position: relative;
+  height: 10.5vh;
+  width: 10.5vh;
+  margin: 0.25vw;
+  margin-top: 0;
+  border-radius: 15%;
+  overflow: hidden;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+.clothes_menu_list_img_container img {
+  object-fit: cover;
+  object-position: top center;
+  height: 100%;
+  width: 100%;
+}
+
+.clothes_menu_list_images_container::-webkit-scrollbar-thumb {
+  background: #b1bdb9;
+}
+
+.clothes_menu_list_images_container::-webkit-scrollbar-thumb:hover {
+  background: #999;
+}
+
+.clothes_menu_list_images_container::-webkit-scrollbar-track:hover {
+  background: #f7f7f7;
+}
+
+.clothes_menu_list_images_container::-webkit-scrollbar-thumb:active {
+  background-color: #666;
+}
+
+.clothes_menu_list_images_container::-webkit-scrollbar-track {
+  background: #f7f7f7;
+}
+.clothes_menu_list_add {
+  background-color: #f98770;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.clothes_menu_list_add img {
+  height: 40%;
+  width: auto;
 }
