--- a/styles/clothes.module.css
+++ b/styles/clothes.module.css
@@ -135,7 +135,6 @@
   transform: scale(1, 0.6) translate(0vw, 0vh);
 }
 .clothes_menu {
-  background-color: black;
   display: flex;
   position: absolute;
   top: 6.25%;
@@ -149,12 +148,9 @@
   display: flex;
   flex-direction: column;
 }
-.clothes_menu_type {
-  background-color: red;
-  flex-basis: 19.75%;
-}
+
 .clothes_menu_list_filters {
-  flex-basis: 4.25%;
+  height: 40px;
   background-color: #b1bdb9;
   display: flex;
   border-top-left-radius: 1vw;
@@ -167,6 +163,8 @@
   background-color: #5a6c73;
   margin-right: 1.5%;
   display: flex;
+  height: 100%;
+  min-height: 100%;
   justify-content: center;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.4);
 }
@@ -265,26 +263,6 @@
   height: 100%;
   width: 100%;
 }
-
-.clothes_menu_list_images_container::-webkit-scrollbar-thumb {
-  background: #b1bdb9;
-}
-
-.clothes_menu_list_images_container::-webkit-scrollbar-thumb:hover {
-  background: #999;
-}
-
-.clothes_menu_list_images_container::-webkit-scrollbar-track:hover {
-  background: #f7f7f7;
-}
-
-.clothes_menu_list_images_container::-webkit-scrollbar-thumb:active {
-  background-color: #666;
-}
-
-.clothes_menu_list_images_container::-webkit-scrollbar-track {
-  background: #f7f7f7;
-}
 .clothes_menu_list_add {
   background-color: #f98770;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
@@ -295,4 +273,48 @@
 .clothes_menu_list_add img {
   height: 40%;
   width: auto;
+}
+
+.clothes_menu_type {
+  /*background-color: red;*/
+  flex-basis: 19.75%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 6%;
+}
+.clothes_menu_type > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 17.5%;
+  flex-basis: 11.25%;
+  margin-bottom: 17%;
+  border-radius: 15%;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.clothes_menu_type_pants img {
+  filter: invert(100%);
+}
+
+/*
+.sidebar_menu_on img {
+  filter: invert(14%) sepia(31%) saturate(5595%) hue-rotate(311deg)
+    brightness(97%) contrast(102%);
+}
+*/
+.clothes_menu_type_all_flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  row-gap: 10px;
+}
+.clothes_menu_type_all_flex > img {
+  height: 35px;
+  width: 35px;
+  margin-left: 2px;
+  margin-right: 2px;
 }
