--- a/styles/clothes.module.css
+++ b/styles/clothes.module.css
@@ -53,6 +53,13 @@
   margin: 0;
   padding: 0;
 }
+.background_icon {
+  position: absolute;
+  top: 91.5%;
+  left: 1%;
+  transform: translate(-50%-50%);
+  z-index: -1;
+}
 .outfit_creator {
   display: flex;
   position: absolute;
@@ -269,6 +276,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 .clothes_menu_list_add img {
   height: 40%;
