--- a/styles/globals.css
+++ b/styles/globals.css
@@ -233,3 +233,187 @@ body {
   filter: invert(100%);
   cursor: inherit;
 }
+.add_clothes_modal {
+  position: absolute;
+  top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 57vw;
+  height: 47.5vh;
+  background-color: rgba(243, 243, 243, 0.55);
+  border-radius: 5vh;
+}
+.flexbox_add_clothes_modal_1 {
+  display: flex;
+  height: 41.75vh;
+  margin-top: 3vh;
+  justify-content: flex-start;
+  margin-left: 1.5vw;
+}
+.flexbox_add_clothes_image {
+  flex-basis: 42.25%;
+  border-radius: 6.5%;
+  background-color: #b1bdb9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.flexbox_add_clothes_not_image {
+  flex-basis: 43.5%;
+  margin-left: 3.55vw;
+}
+.flexbox_add_clothes_modal_2 {
+  display: flex;
+  flex-direction: column;
+  height: 41.75vh;
+}
+
+.flexbox_add_clothes_add_new {
+  flex-basis: 16%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  font-weight: 700;
+  color: #f98770;
+  margin-bottom: 1vh;
+}
+.flexbox_add_clothes_category {
+  background-color: #f2f2f2;
+  flex-basis: 9%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  margin-bottom: 3.2vh;
+  border-radius: 2vh;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+.flexbox_add_clothes_expand {
+  font-size: 20px;
+  display: inline-block;
+  transform: scale(1, 0.7) translate(0.1vw, 0.4vh);
+  margin-left: 0.2vw;
+  font-weight: 700;
+}
+
+.flexbox_add_clothes_color_area {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 49%;
+  margin-bottom: 2.2vh;
+  border-radius: 2.5vh;
+  background-color: #f2f2f2;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+}
+.flexbox_add_clothes_color_text {
+  flex-basis: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+.flexbox_add_clothes_modal_colors {
+  flex-basis: 80%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 1.75%;
+  margin-left: 0.5vw;
+  margin-right: 0.5vw;
+  align-content: flex-start;
+}
+.flexbox_add_clothes_modal_colors * {
+  height: 3.3vh;
+  width: 1.87vw;
+  margin-top: 0.9vh;
+  margin-left: 0.51vw;
+  margin-right: 0.51vw;
+  margin-bottom: 0.8vh;
+  border-radius: 0.8vh;
+  box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+.flexbox_add_black {
+  background-color: black;
+}
+.flexbox_add_white {
+  background-color: white;
+}
+.flexbox_add_red {
+  background-color: red;
+}
+.flexbox_add_orange {
+  background-color: orange;
+}
+.flexbox_add_yellow {
+  background-color: yellow;
+}
+.flexbox_add_green {
+  background-color: green;
+}
+.flexbox_add_aqua {
+  background-color: aqua;
+}
+.flexbox_add_blue {
+  background-color: blue;
+}
+.flexbox_add_purple {
+  background-color: purple;
+}
+.flexbox_add_pink {
+  background-color: pink;
+}
+.flexbox_add_brown {
+  background-color: saddlebrown;
+}
+.flexbox_add_beige {
+  background-color: bisque;
+}
+.add_clothes_modal p {
+  margin: 0;
+}
+.flexbox_add_clothes_modal_3 {
+  display: flex;
+  flex-basis: 12.25%;
+  justify-content: space-between;
+}
+.flexbox_add_clothes_discard {
+  background-color: #596c73;
+  flex-basis: 44%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: white;
+  border-radius: 2.5vh;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+.flexbox_add_clothes_save {
+  background-color: #f98770;
+  flex-basis: 44%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: white;
+  border-radius: 2.5vh;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+.flexbox_add_clothes_close {
+  position: absolute;
+  top: 0.5%;
+  left: 101%;
+  transform: translate(-50%, -50%);
+  height: 3.4vh;
+  width: 1.9vw;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #596c73;
+  cursor: pointer;
+}
+.blurred {
+  filter: blur(25px);
+  transition: filter 0.05s ease-in-out;
+}
