--- a/styles/clothes.module.css
+++ b/styles/clothes.module.css
@@ -112,6 +112,10 @@
   align-items: center;
   color: #f5f5f5;
   font-size: 16px;
+  cursor: pointer;
+}
+.outfit_creator_save:hover {
+  filter: brightness(90%);
 }
 .outfit_creator_generate {
   display: flex;
@@ -125,6 +129,10 @@
   align-items: center;
   color: #f5f5f5;
   font-size: 16px;
+  cursor: pointer;
+}
+.outfit_creator_generate > div:hover {
+  filter: brightness(90%);
 }
 .outfit_creator_generate_text {
   flex-basis: 81%;
@@ -174,6 +182,10 @@
   min-height: 100%;
   justify-content: center;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+.clothes_menu_list_filters > div:hover {
+  filter: brightness(90%);
 }
 .clothes_menu_list_filters > div > img {
   padding-top: 12.5%;
@@ -264,11 +276,15 @@
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
-.clothes_menu_list_img_container img {
+.clothes_menu_list_img_container > img {
   object-fit: cover;
   object-position: top center;
   height: 100%;
   width: 100%;
+  cursor: pointer;
+}
+.clothes_menu_list_img_container img:hover {
+  filter: brightness(90%);
 }
 .clothes_menu_list_add {
   background-color: #f98770;
@@ -277,6 +293,9 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+.clothes_menu_list_add:hover {
+  filter: brightness(90%);
 }
 .clothes_menu_list_add img {
   height: 40%;
@@ -301,7 +320,6 @@
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
-
 .clothes_menu_type_pants img {
   filter: invert(100%);
 }
