--- a/styles/cupboard.module.css
+++ b/styles/cupboard.module.css
@@ -45,6 +45,10 @@
   align-items: center;
   border-radius: 20%;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+.filters_cupboard_top:hover {
+  filter: brightness(90%);
 }
 .single_pieces_cupboard_top {
   flex-basis: 19.75vw;
@@ -55,6 +59,7 @@
   border-bottom-left-radius: 2vw;
   z-index: 0;
   box-shadow: inset -2px 10px 10px -10px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 .outfits_cupboard_top {
   flex-basis: 21.75vw;
@@ -64,6 +69,7 @@
   border-top-right-radius: 2vw;
   border-bottom-right-radius: 2vw;
   box-shadow: inset -2px 10px 10px -10px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 .pieces_outfits_moving_container {
@@ -73,10 +79,9 @@
   border-radius: 20vw;
   background-color: #f98770;
   z-index: 1;
-  pointer-events: none;
+  pointer-events: all;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
 }
-
 .add_cupboard_top {
   flex-basis: 4vw;
   background-color: #f98770;
@@ -87,10 +92,10 @@
   align-items: center;
   border-radius: 20%;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 .add_cupboard_top:hover {
   filter: brightness(90%);
-  cursor: pointer;
 }
 .cupboard_flexbox_middle_all {
   display: flex;
@@ -212,8 +217,11 @@
   margin-right: 1.4vw;
   margin-top: 1vh;
   text-align: end;
+  cursor: pointer;
 }
-
+.cupboard_single_heart img:hover {
+  filter: brightness(90%);
+}
 .cupboard_single_flexbox_middle_third {
   display: flex;
   margin-top: 2%;
@@ -237,8 +245,11 @@
   border-radius: 1.5vw;
   font-weight: 700;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
-
+.delete_single_flexbox:hover {
+  filter: brightness(90%);
+}
 .edit_single_flexbox {
   background-color: #e7e3e4;
   padding-left: 3.1vw;
@@ -251,8 +262,11 @@
   border-radius: 1.5vw;
   font-weight: 700;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
-
+.edit_single_flexbox:hover {
+  filter: brightness(90%);
+}
 .add_clothes_modal {
   position: absolute;
   top: 48%;
