--- a/styles/clothes.module.css
+++ b/styles/clothes.module.css
@@ -108,8 +108,8 @@
 
 .outfit_creator_images_container {
   position: relative;
-  height: calc(1.4 * 25.5vh);
-  width: calc(0.75 * 25.5vw);
+  height: 360px;
+  width: 360px;
   border-radius: 5%;
   overflow: hidden;
 }
@@ -137,7 +137,7 @@
   justify-content: center;
   align-items: center;
   color: #f5f5f5;
-  font-size: calc(8px + 0.4vw);
+  font-size: 14px;
   cursor: pointer;
 }
 .outfit_creator_save:hover {
@@ -154,7 +154,7 @@
   justify-content: center;
   align-items: center;
   color: #f5f5f5;
-  font-size: calc(8px + 0.4vw);
+  font-size: 14px;
   cursor: pointer;
 }
 .outfit_creator_generate > div:hover {
@@ -171,9 +171,32 @@
   border-radius: 50%;
 }
 .outfit_creator_generate_arrow {
-  font-size: calc(16px + 0.4vw);
+  font-size: 21px;
   display: inline-block;
   transform: scale(1, 0.6);
+}
+@media (max-width: 1660px) {
+  .outfit_creator {
+    top: 7.35%;
+    left: 1.75%;
+    width: 55vw;
+    background-color: red;
+  }
+}
+@media (max-width: 1440px) {
+  .outfit_creator {
+    top: 7.35%;
+    left: 1.75%;
+    width: 55vw;
+    background-color: blue;
+  }
+  .outfit_creator_images_container {
+    position: relative;
+    height: 280px;
+    width: 280px;
+    border-radius: 5%;
+    overflow: hidden;
+  }
 }
 /* #endregion */
 /* #region -------------LIST-----------------*/
@@ -229,12 +252,12 @@
   align-items: center;
   justify-content: center;
   font-weight: 500;
-  font-size: calc(8px + 0.4vw);
+  font-size: 14px;
   color: white;
 }
 
 .clothes_menu_list_filters_filter > span {
-  font-size: calc(12px + 0.4vw);
+  font-size: 18px;
   display: inline-block;
   transform: scale(1, 0.5);
   margin-left: 0.2vw;
@@ -331,7 +354,7 @@
 }
 
 .clothes_menu_type {
-  flex-basis: 19.75%;
+  flex-basis: 128px;
   display: flex;
   flex-direction: column;
   padding-top: 6%;
@@ -348,8 +371,8 @@
   cursor: pointer;
 }
 .clothes_menu_type > div > div > img {
-  height: calc(1.4 * 5.5vh);
-  width: calc(0.75 * 5.5vw);
+  height: 70px;
+  width: 70px;
 }
 .clothes_menu_type_pants img {
   filter: invert(100%);
@@ -363,8 +386,8 @@
   row-gap: 10px;
 }
 .clothes_menu_type_all_flex > img {
-  height: calc(1.4 * 2.5vh);
-  width: calc(0.75 * 2.5vw);
+  height: 38px;
+  width: 38px;
   margin-left: 2px;
   margin-right: 2px;
 }
